fix contrast issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,8 +37,7 @@
   position: absolute;
   width: 9rem;
   height: 8rem;
-  opacity: 0.7;
-  background-color: gainsboro;
+  background-color: rgba(255, 255, 255, 0.4) ;
   left: 2rem;
   top: 1rem;
   font-size: 0.8rem;
@@ -173,6 +172,7 @@ div.upgrade-container{
 
 .upgrade-detail{
   text-decoration: underline;
+  color: blue;
 }
 
 footer p{
@@ -227,8 +227,7 @@ footer p{
   position: absolute;
   width: 10rem;
   height: 9rem;
-  opacity: 0.7;
-  background-color: gainsboro;
+  background-color: rgba(255, 255, 255, 0.4) ;
   left: 2rem;
   top: 1rem;
   font-size: 0.8rem;
@@ -774,8 +773,7 @@ input[type="email"], input[type="text"]{
   position: absolute;
   width: 18rem;
   height: 12.6rem;
-  opacity: 0.7;
-  background-color: gainsboro;
+  background-color: rgba(255, 255, 255, 0.4) ;
   left: 5rem;
   top: 7rem;
   font-size: 1.5rem;
